# expert-skill-distillation-prototype

./: .gitattributes  .gitignore  AUDIT_CURRENT_STATE_20260624.md  DEMO_ACCEPTANCE_CHECK.md  HANDOFF_FOR_NEXT_CHAT.md  LICENSE  PROJECT_OVERVIEW_FOR_GITHUB.md  README.md  README_DEMO.md  README_PROTOTYPE.md  pyproject.toml  requirements.txt
agents/: api_review_llm_agent.py  api_review_mock_agent.py  live_tool_case_agent.py  llm_security_agent.py  local_security_review_agent.py  non_oracle_local_security_agent.py
backends/: __init__.py  execution_backend.py  live_llm_text.py  local_real_agent.py  offline_deterministic.py  sandbox_agent.py
configs/: agent_backends_v0.json  benchmark_lanes_v0.json  system_readiness_v0.json
demo/: open_materials_example.json  streamlit_app.py
docs/: ADDING_A_NEW_SKILL.md  ARCHITECTURE_AND_DESIGN.md  ARCHITECTURE_OVERVIEW.md  ARTIFACT_TYPES.md  CLAIM_BOUNDARY.md  CLEAN_CLONE_SMOKE.md  CODEX_CONTEXT_HANDOFF.md  COMPONENT_BASELINE_PLAN.md  CONSTRAINED_POST_EXECUTION_REVISION.md  CORE_METHOD_SPEC.md  DATA_AND_PRIVACY_POLICY.md  DEMO_DESIGN.md  DEMO_SCRIPT.md  DEMO_SCRIPT_TEMPLATE.md  EXPERIMENT_LOG_TEMPLATE.md  FALSIFICATION_AND_NEXT_EVIDENCE.md  HANDOFF.md  HYBRID_KNOWLEDGE_SKILL_TRAJECTORY_ARCHITECTURE.md  IMPLEMENTATION_GAP_ANALYSIS.md  MATURITY_GAP_CLOSURE_PLAN.md  MENTOR_REQUIREMENTS_ALIGNMENT.md  MENTOR_WECHAT_UPDATE.md  METHOD_DISCOVERY_PLAN.md  METHOD_HYPOTHESIS.md  METRIC_EXPLORATION.md  MVP_DESIGN.md  MVP_VERTICAL_SLICE_PLAN.md  PAPER_READING_NOTES_TEMPLATE.md  PLATFORM_ROADMAP.md  POSTERIOR_SKILL_REVISION_METHOD.md  QUICKSTART.md  (+24 more)
(+5748 files in other folders)
